# Athenas-Financial

./: main.py  pyproject.toml
Core/: Analysis.py  Engine.py  Scrapper.py
templates/: Index.html
