[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
pandas = "^1.1.0"
colorama = "^0.4.3"
scholarly = "^0.3.3"
gTTS = "^2.1.1"
textblob = "^0.15.3"
pycountry = "^20.7.3"
SpeechRecognition = "^3.8.1"
yfinance = "^0.1.54"
quandl = "^3.5.2"
bs4 = "^0.0.1"
lxml = "^4.5.2"
